[gd_scene load_steps=6 format=3 uid="uid://0a5ltmhwdaxt"]

[ext_resource type="Script" uid="uid://bl7dxo7fwedd5" path="res://levels/menu/menu.gd" id="1_54wux"]
[ext_resource type="Texture2D" uid="uid://bja0wl8tcw71c" path="res://art/backgrounds/background_01.png" id="1_unbo6"]
[ext_resource type="PackedScene" uid="uid://dqbmu1v1b4lph" path="res://levels/level_01/level_01.tscn" id="2_b6ac3"]
[ext_resource type="Texture2D" uid="uid://bujx43rcy5b85" path="res://art/backgrounds/background_02.png" id="2_g1blg"]

[sub_resource type="LabelSettings" id="LabelSettings_4oog6"]
font_size = 72

[node name="Menu" type="Node" node_paths=PackedStringArray("ui", "level_container", "ip_line_edit", "status_label", "not_connected_hbox", "host_hbox", "steam_name_label")]
script = ExtResource("1_54wux")
ui = NodePath("UI")
level_container = NodePath("Level")
level_scene = ExtResource("2_b6ac3")
ip_line_edit = NodePath("UI/TabContainer/Local Network/NotConnectedHBox/IPLineEdit")
status_label = NodePath("UI/TabContainer/Local Network/StatusLabel")
not_connected_hbox = NodePath("UI/TabContainer/Local Network/NotConnectedHBox")
host_hbox = NodePath("UI/TabContainer/Local Network/HostHBox")
steam_name_label = NodePath("UI/TabContainer/Steam/SteamPersonaName")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dqbmu1v1b4lph")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTrees" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_unbo6")
expand_mode = 2
stretch_mode = 4

[node name="BackgroundRocks" type="TextureRect" parent="UI/BackgroundTrees"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g1blg")
expand_mode = 2
stretch_mode = 4

[node name="TabContainer" type="TabContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -117.5
offset_right = 200.0
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
use_hidden_tabs_for_min_size = true

[node name="Steam" type="VBoxContainer" parent="UI/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SteamPersonaName" type="Label" parent="UI/TabContainer/Steam"]
layout_mode = 2
text = "Name not fetched"

[node name="SteamHostButton" type="Button" parent="UI/TabContainer/Steam"]
layout_mode = 2
text = "Host"

[node name="SteamJoinButton" type="Button" parent="UI/TabContainer/Steam"]
layout_mode = 2
text = "Join
"

[node name="ItemList" type="ItemList" parent="UI/TabContainer/Steam"]
layout_mode = 2

[node name="Local Network" type="VBoxContainer" parent="UI/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="NotConnectedHBox" type="VBoxContainer" parent="UI/TabContainer/Local Network"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/TabContainer/Local Network/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host
"

[node name="JoinButton" type="Button" parent="UI/TabContainer/Local Network/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="IPLineEdit" type="LineEdit" parent="UI/TabContainer/Local Network/NotConnectedHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter IP Address"

[node name="HostHBox" type="VBoxContainer" parent="UI/TabContainer/Local Network"]
visible = false
layout_mode = 2

[node name="PlayButton" type="Button" parent="UI/TabContainer/Local Network/HostHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="StatusLabel" type="Label" parent="UI/TabContainer/Local Network"]
layout_mode = 2
label_settings = SubResource("LabelSettings_4oog6")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/TabContainer/Local Network/NotConnectedHBox/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/TabContainer/Local Network/NotConnectedHBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/TabContainer/Local Network/HostHBox/PlayButton" to="." method="_on_play_button_pressed"]
